--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <footer>
                 <div class="footer">
                     <div class="icons">
-                        <a href="https://www.facebook.com/mygennev/?utm_medium=email&_hsmi=197250788&_hsenc=p2ANqtz--july9vDa_ikEYv8j0qCNzkqm2dCOjYiKhhGXPQXXsDjPzMbmfmsKd4bCjnfpDO8dk3rHK6HgitV-qILsk-_VhoJKbCg&utm_content=197250788&utm_source=hs_email" alt="facebook" target="_blank">.
+                        <a href="https://www.facebook.com/mygennev/?utm_medium=email&_hsmi=197250788&_hsenc=p2ANqtz--july9vDa_ikEYv8j0qCNzkqm2dCOjYiKhhGXPQXXsDjPzMbmfmsKd4bCjnfpDO8dk3rHK6HgitV-qILsk-_VhoJKbCg&utm_content=197250788&utm_source=hs_email" alt="facebook" target="_blank">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </a>
                         <a href="https://twitter.com/jillangelo?utm_medium=email&_hsmi=197250788&_hsenc=p2ANqtz-_8i8I2Yh6duIH7Hx7BAE5q2hsl2_RyXeDXncINWljFW37sGghdjBcMd2yqx06polcQMNcQuJ5kpkACsLQ0-M_RTIM7Xg&utm_content=197250788&utm_source=hs_email" alt="twitter" target="_blank">
